Services/02-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-nodeport
spec:
  selector:
   app: welcome
