Services/03-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-a-ingress-nontls
spec:
  entryPoints:
